--- a/css code.css
+++ b/css code.css
@@ -1,3 +1,11 @@
+.body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 .bg1
 {
   background-color: #1abc9c;
